fix subnav spacing

--- a/_sass/custom/nav.scss
+++ b/_sass/custom/nav.scss
@@ -369,6 +369,9 @@
                   height: auto;
                   padding: 0;
                 }
+                a.nav__link {
+                  margin-left: .5em;
+                }
                 .nav__link {
                   font-size: 15px;
                   text-transform: none;
